--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -53,6 +53,6 @@ ext {
     kotlinStdlib = "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     kotlinReflect = "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
 
-    stateMachine = "com.github.xvar:StateMachine:0.1.3-alpha"
+    stateMachine = "com.github.xvar:StateMachine:0.1.3-beta"
 
 }
